// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NationListItem tests Behaviour Press 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NationListItem
    id="Test id"
    onPress={[MockFunction]}
    text="Test list item"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "flex": 1,
              "marginLeft": 15,
            }
          }
        >
          Test list item
        </Text>
      </TouchableOpacity>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.1)",
        "flex": 1,
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "flex": 1,
              "marginLeft": 15,
            }
          }
        >
          Test list item
        </Text>,
        "onPress": [Function],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Test list item",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "white",
            "flex": 1,
            "marginLeft": 15,
          },
        },
        "ref": null,
        "rendered": "Test list item",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "flex": 1,
                "marginLeft": 15,
              }
            }
          >
            Test list item
          </Text>
        </TouchableOpacity>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.1)",
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "flex": 1,
                "marginLeft": 15,
              }
            }
          >
            Test list item
          </Text>,
          "onPress": [Function],
          "style": Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Test list item",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "flex": 1,
              "marginLeft": 15,
            },
          },
          "ref": null,
          "rendered": "Test list item",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`NationListItem tests Rendering With text 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NationListItem
    onPress={[Function]}
    text="Test list item"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
        testID="Touchable"
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "flex": 1,
              "marginLeft": 15,
            }
          }
        >
          Test list item
        </Text>
      </TouchableOpacity>,
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.1)",
        "flex": 1,
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "white",
              "flex": 1,
              "marginLeft": 15,
            }
          }
        >
          Test list item
        </Text>,
        "onPress": [Function],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        "testID": "Touchable",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": "Test list item",
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "white",
            "flex": 1,
            "marginLeft": 15,
          },
        },
        "ref": null,
        "rendered": "Test list item",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
          testID="Touchable"
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "flex": 1,
                "marginLeft": 15,
              }
            }
          >
            Test list item
          </Text>
        </TouchableOpacity>,
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.1)",
          "flex": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "white",
                "flex": 1,
                "marginLeft": 15,
              }
            }
          >
            Test list item
          </Text>,
          "onPress": [Function],
          "style": Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
          "testID": "Touchable",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Test list item",
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "white",
              "flex": 1,
              "marginLeft": 15,
            },
          },
          "ref": null,
          "rendered": "Test list item",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
